# MMH-RS

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  COMPLETE_DOCUMENTATION_PACKAGE_SUMMARY.md  Cargo.toml  DOCUMENTATION_UPDATE_COMPLETE.md  EXTENDED_DOCUMENTATION_COMPLETE.md  FINAL_PROJECT_STATUS.md  FINAL_SYNC_VERIFICATION.md  GOLD_STANDARD_BENCHMARK.md  LAUNCHER_GUIDE.md  LICENSE  MMH-RS_V1.2.0_ELITE_TIER_COMPLETE.md  MMH-RS_V1.2.0_MASTER_OVERVIEW.md  MMH-RS_V1.2.0_PROJECT_SYNC_COMPLETE.md  MMH-RS_V1.2.0_TECHNICAL_MASTER.md  MMH-RS_V1.2.0_TECHNICAL_SPECIFICATION.md  MMH-RS_V1.2.0_USER_GUIDE.md  MMH-RS_V1.2.0_USER_MASTER.md  PROJECT_WHITE_PAPERS_COMPLETE.md  README.md  README_BUILD.md  RELEASE_ANNOUNCEMENT.md  RGIG_REBUILD_SUMMARY.md  V2_LAUNCH_FINAL_VERIFICATION.md  V2_ROADMAP.md  V3_ROADMAP.md  V4_ROADMAP.md  V5_ROADMAP.md  build.bat  build.rs  cargo-dist.toml  compare_benchmarks.bat  generate_shareable_benchmark.bat  mmh-rs-ci-2025-07-22_21-12-26.yml  mmh.sh  mmh_agent.bat  mmh_cmdmenu.bat  mmh_error_log.txt  mmh_human.bat  (+4 more)
Kai Core/: KAI_CORE_V2_MASTER.tex  README_V2_PDF.md  build_v2_pdf.bat  build_v2_pdf.sh
Project White Papers/: 00_AGENT_PLATINUM.md  01_MMH_RS_MASTER_GUIDE.md  02_INSTALLATION_AND_SETUP.md  03_CORE_OPERATIONS.md  04_BENCHMARKING_AND_TESTING.md  CHANGELOG.md  DEVELOPMENT_HISTORY.md  KAI_CORE_INTEGRATION_COMPLETE.aux  KAI_CORE_INTEGRATION_COMPLETE.out  KAI_CORE_INTEGRATION_COMPLETE.tex  KAI_CORE_INTEGRATION_COMPLETE.toc  MASTER_DOCUMENTATION.md  MASTER_DOCUMENTATION_FINAL.md  MMH-RS_MASTER_DOCUMENT.aux  MMH-RS_MASTER_DOCUMENT.out  PROJECT_STATUS.md  (+26 more)
(+486 files in other folders)
