[package]
name = "mmh"
version = "1.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zstd = "0.13"
rand = "0.8"
rand_chacha = "0.3" 
chrono = "0.4.41"
indicatif = "0.18.0"
sysinfo = "0.36.1"
crossterm = "0.29.0"
serde_json = "1.0"
built = "0.7"
qrcode = "0.13"
glob = "0.3"
tar = "0.4"
tempfile = "3.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
ctrlc = "3.4"

[build-dependencies]
chrono = "0.4"
